--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
     <div class="window-bg">
         <div class="front-img"></div>
         <div class="titlediv">
-            <div id=titleb>Startpage template...</div>
+            <div id=titleb>Vini's homepage</div>
             <div id="clock"></div>
         </div>
-        <div class="windowbackgroundarea1"><div id="Subtitle">Have a nice day.</div></div>
+        <div class="windowbackgroundarea1">O &uacute;ltimo defunto que eu vi sorrindo saiu andando.<div id="Subtitle"></div></div>
         <div class="windowbackgroundarea2">
         <div class="centerDivs">
             <div class="category">
-                <div class="categorytitle">Music</div>
-                <div class="categorycontent"><a href="https://music.youtube.com/">Youtube</a> - <a href="">AudioLibrary</a> - <a href="">Radio</a></div>
+		    <div class=textin>
+			    &nbsp;&nbsp;&nbsp; Hello, my name is Vinicius Luz Oliveira, physics grad student at Universidade Federal de Santa Catarina. You can read more about me <a>here</a>.
+		    <br>
+		    <br>
+		    &nbsp;&nbsp;&nbsp;This is a little webpage with the main purpose of serving as a library of content I write (mainly physics, specially quantum information).
+		    </div>
+                <div class="categorytitle">Study playlists</div>
+		<div class="categorycontent"><a href="https://music.youtube.com/">Music</a> - Great courses (w/ comments)</div>
                 <div class="categorytitle">Dev</div>
-                <div class="categorycontent"><a href="https://gitlab.com">Gitlab</a> - <a href="https://github.com">Github</a></div>
-                <div class="categorytitle">Sources</div>
-                <div class="categorycontent"><a href="https://pixabay.com/photos/blossom-pink-garden-nature-4151081/">Photo1</a> - <a href="https://fontsarena.com/w95fa-by-fontsarena/">Font</a> - <a href="https://pixabay.com/illustrations/picture-woodblock-printing-woodcut-1247354/">Photo2</a> - <a href="https://pixabay.com/">Images</a></div>
-                <div class="categorytitle">Private</div>
-                <div class="categorycontent"><a href=" ">Email</a> - <a href="">Homeserver</a> - <a href="">Email2</a> - <a href="">Photos</a></div><div class="categorycontent"><a href="">Music projects</a> - <a href="">CAD files</a> - <a href="">Todo list</a> - <a href="">Food</a></div>
+                <div class="categorycontent"><a href="https://github.com/vinicomv">Github</a> - LaTeX templates</div>
+                <div class="categorytitle">Materiais</div>
+                <div class="categorycontent"><a href="">Notas de aula</a> - <a href="">Ensaios</a> - <a href="">Videos</a></div>
             </div>
         </div>
         </div>
